fix spacing

--- a/wwwroot/content/css/site.css
+++ b/wwwroot/content/css/site.css
@@ -60,7 +60,7 @@ body>.container-fluid{
     font-size:1.5em;
 }
 nav{
-    margin-bottom:2em;
+    margin-bottom:1em;
 }
 .navbar img{
     width:50px;
